--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morain/ctx",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "use context data message",
   "main": "dist/index.js",
   "scripts": {
@@ -11,6 +11,10 @@
   },
   "author": "morain",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/moorain/morain-ctx"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -18,6 +22,7 @@
   "devDependencies": {
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.9",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
