--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@morain/ctx",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "use context data message",
   "main": "dist/index.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "type": "git",
     "url": "https://github.com/moorain/morain-ctx"
   },
+  "keywords": ["react", "redux", "context","event"],
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
