--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "type": "git",
     "url": "https://github.com/moorain/morain-ctx"
   },
-  "keywords": ["react", "redux", "context","event"],
+  "keywords": [
+    "react",
+    "redux",
+    "context",
+    "event"
+  ],
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.45",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "terser-webpack-plugin": "^5.3.9",
